--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <script type="text/javascript">
-window.alert("ウンチ漏らせ");
+window.alert("ぎゃあああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああ");
 </script>
 <h1>kiachooooooの部屋へようこそ</h1>
 
