--- a/index.html
+++ b/index.html
@@ -4,30 +4,46 @@
 <head>
     <meta charset="utf-8" />
     <title>kaichooooooの部屋</title>
+    <style>
+    h1{
+        border:double 3px #ff6600;
+        color:#000000;
+    }
+    </style>
 </head>
 <body>
 <script type="text/javascript">
-window.alert("ぎゃあああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああ");
+<!--
+window.alert("ジャガイモ");
+//-->
 </script>
-<h1>kiachooooooの部屋へようこそ</h1>
+<h1>kaichooooooの部屋</h1>
 
 <p>
 特に書くことがありません、これからいろいろ追加していく予定です。<br>
-kaichooooooの趣味部屋は<a href="///C:/Users/%E7%94%BA%E6%9C%AC%E3%80%80%E7%A5%90%E5%A4%AA/Desktop/html%E3%81%A7%E9%81%8A%E3%81%B6/HTMLPage7.html">コチラ</a>と、<a href="">コチラ</a>
+kaichooooooの趣味部屋は<s>
+<a href="///C:/Users/%E7%94%BA%E6%9C%AC%E3%80%80%E7%A5%90
+%E5%A4%AA/Desktop/html%E3%81%A7%E9%81%8A%E3%81%B6/HTMLPage7.html">
+コチラ</a></s>と、<s><a href="">コチラ</a></s>
 
 
 
 </p>
+<script>
+<!--
+function func01(){window.alert("おちんちんyeah!!!!")}
+function otintin(){window.alert("あ")}
+//-->
+</script>
+<!--<input type="button"value="ダイアログボックスを開く"onClick="func01()">
+<input type="button"value="おちんちん"onClick="otintin()">-->
+<hr>
 
 
 <script type="text/javascript">
+<!--
 document.write("URL:",location.href);
-document.write(br);
-
-
-
-
-
+//-->
 </script>
 </body>
 </html>
