--- a/index.html
+++ b/index.html
@@ -21,10 +21,20 @@ window.alert("ジャガイモ");
 
 <p>
 特に書くことがありません、これからいろいろ追加していく予定です。<br>
-kaichooooooの趣味部屋は<s>
+<!--kaichooooooの趣味部屋は<s>
 <a href="///C:/Users/%E7%94%BA%E6%9C%AC%E3%80%80%E7%A5%90
-%E5%A4%AA/Desktop/html%E3%81%A7%E9%81%8A%E3%81%B6/HTMLPage7.html">
-コチラ</a></s>と、<s><a href="">コチラ</a></s>
+%E5%A4%AA/Desktop/html%E3%81%A7%E9%81%8A%E3%81%B6/HTML
+Page7.html">
+コチラ</a></s>と、<s><a href="">コチラ</a></s>-->
+<p>
+<ol type="1">
+<li><a href="">うんこ</a></li>
+<li><a href="">うんこ</a></li>
+<li><a href="">うんこ</a></li>
+<li><a href="">うんこ</a></li>
+</ol>
+</p>
+
 
 
 
