--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@ Page7.html">
 コチラ</a></s>と、<s><a href="">コチラ</a></s>-->
 <p>
 <ol type="1">
-<li><a href="">うんこ</a></li>
-<li><a href="">うんこ</a></li>
-<li><a href="">うんこ</a></li>
-<li><a href="">うんこ</a></li>
+    <li><s><a href="">うんこ</a></s></li>
+    <li><s><a href="">うんこ</a></s></li>
+    <li><s><a href="">うんこ</a></s></li>
+    <li><s><a href="">うんこ</a></s></li>
 </ol>
 </p>
 
